--- a/cpp-pipeline/.github/workflows/cpp.yml
+++ b/cpp-pipeline/.github/workflows/cpp.yml
@@ -25,7 +25,7 @@ jobs:
         fetch-depth: 0
 
     - name: Run Custom CPP CI action
-      uses: ./.github/actions/cpp/
+      uses: ./.github/actions/cpp
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
@@ -34,7 +34,8 @@ jobs:
         sonar_args: >
           -D sonar.organization=${{ env.SONAR_ORGANIZATION }}
           -D sonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
-          -D sonar.sources=${{ env.PYTHON_APP_SOURCE_DIR }}
+          -D sonar.sources=${{ env.PROJECT_DIR }}
+          --define sonar.cfamily.compile-commands="build/compile_commands.json"
         dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
         dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
         docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
