--- a/rust-pipeline/.github/actions/rust/action.yml
+++ b/rust-pipeline/.github/actions/rust/action.yml
@@ -33,7 +33,6 @@ runs:
       shell: bash
       run: echo "current_branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
 
-
     - name: Checkout code
       uses: actions/checkout@v4
       with:
@@ -50,9 +49,11 @@ runs:
 
     - name: Build binaries in release mode
       run: cargo build --profile release --verbose --workspace
+      shell: bash
     
     - name: Run tests in release mode
       run: cargo test --profile release --verbose --workspace
+      shell: bash
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarqube-scan-action@v5.0.0
