fix(maven): bump maven support

--- a/maven-pipeline/.vscode/extensions.json
+++ b/maven-pipeline/.vscode/extensions.json
@@ -8,6 +8,8 @@
         // Java - extra
         "redhat.java",
         "Oracle.oracle-java",
+        //xml
+        "redhat.vscode-xml",
         // Docker 
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
