--- a/maven-pipeline/.vscode/launch.json
+++ b/maven-pipeline/.vscode/launch.json
@@ -1,23 +1,19 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-      {
-        "name": "Launch",
-        "type": "maven",
-        "request": "launch",
-        "args": ["test"],
-        "cwd": "${workspaceRoot}",
-        "workingDirectory": "${workspaceRoot}",
-        "console": "integratedTerminal"
-      },
-      {
-        "name": "Build",
-        "type": "maven",
-        "request": "launch",
-        "args": ["clean", "package"],
-        "cwd": "${workspaceRoot}",
-        "workingDirectory": "${workspaceRoot}",
-        "console": "integratedTerminal"
-      }
+        {
+            "type": "java",
+            "name": "Current File",
+            "request": "launch",
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch"
+        }
     ]
-  }
+}
