--- a/node-pipeline/.vscode/extensions.json
+++ b/node-pipeline/.vscode/extensions.json
@@ -3,6 +3,8 @@
         // Docker 
         "ms-vscode-remote.remote-containers",
         "ms-azuretools.vscode-docker",
+        //firefox
+        "firefox-devtools.vscode-firefox-debug",
         // Sonar 
         "SonarSource.sonarlint-vscode",
         // Angular , VUE
