--- a/node-pipeline/.vscode/tasks.json
+++ b/node-pipeline/.vscode/tasks.json
@@ -3,7 +3,6 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Start",
       "type": "npm",
       "script": "start",
       "isBackground": true,
@@ -22,7 +21,6 @@
       }
     },
     {
-      "label": "Test",
       "type": "npm",
       "script": "test",
       "isBackground": true,
@@ -41,9 +39,20 @@
       }
     },
     {
-      "label": "Build",
+      "type": "npm",
+      "script": "install",
+      "group": "clean",
+      "problemMatcher": [],
+      "label": "npm: install",
+      "detail": "install dependencies from package"
+    },
+    {
       "type": "npm",
       "script": "build",
-    },
+      "group": "build",
+      "problemMatcher": [],
+      "label": "npm: build",
+      "detail": "ng build"
+    }
   ]
 }
