--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -16,6 +16,7 @@ RUN export NVM_DIR="$HOME/.nvm"; \
 nvm install 23
 
 # Install Trivy 
+# Might need to comment out if devcontainer issues
 RUN <<EOF cat >> /etc/yum.repos.d/trivy.repo
 [trivy]
 name=Trivy repository
