--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -8,10 +8,11 @@ dnf install nodejs -y; \
 # clear cache
 rm -rf /var/cache
 
-# Install uv and latest python 
+# Install uv, latest python and ruff 
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 RUN source $HOME/.local/bin/env && uv python install
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1
+RUN source $HOME/.local/bin/env && uv tool install ruff@latest
 
 # Install Trivy 
 RUN <<EOF cat >> /etc/yum.repos.d/trivy.repo
@@ -31,8 +32,13 @@ RUN dnf update -y; dnf install trivy -y; rm -rf /var/cache
 # COPY . .
 
 ## Install project requirements, build project
-# RUN uv pip install .  
+# RUN source $HOME/.local/bin/env && uv pip install .  
 
 ## Expose port and run app
 # EXPOSE 8080
-# ENTRYPOINT [ "uv", "run", "--frozen", "gunicorn", "projectName" ]
+
+# for uvicorn (FastAPI)
+# ENTRYPOINT [ "uv", "run", "fastapi", "run", "src/python_template/main.py", "--port", "8080", "--workers", "4" "--host", "0.0.0.0"]
+
+# for gunicorn (Flask)
+# CMD [ "GUNICORN_CMD_ARGS='--bind=0.0.0.0:8080 --workers=8'", "uv", "run", "--frozen", "gunicorn", "'src/python_template/main.py:gunicorn()'" ]
