--- a/python-pipeline/.github/actions/python/action.yml
+++ b/python-pipeline/.github/actions/python/action.yml
@@ -23,10 +23,9 @@ inputs:
   docker_image_name:
     description: 'Docker image name'
     required: true
-  python_version:
-    description: 'Required Python version'
-    required: false
-    default: "3.12"
+  source_dir:
+    description: 'Source directory for the python application'
+    required: true
   pytest_coverage_xml_file_name:
     description: 'PyTest coverage report path'
     required: false
@@ -44,7 +43,6 @@ runs:
       id: branch-names
       shell: bash
       run: echo "current_branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -64,15 +62,34 @@ runs:
       uses: actions/setup-python@v5
       id: setup_python
       with:
-        python-version: ${{ inputs.python_version }}
+        python-version-file: ".python-version"
         cache: pip
 
-    - name: Install dependencies from requirements.txt as well as pytest and pytest-cov
+    - name: Install dependencies from requirements.txt and pyproject.toml, as well as pytest and pytest-cov
       run: |
-        pip install -r requirements.txt
-        grep -q 'pytest' requirements.txt || pip install pytest
-        grep -q 'pytest-cov' requirements.txt || pip install pytest-cov
+        ls | grep -q 'requirements.txt' && pip install requirements.txt
+        ls | grep -q 'pyproject.toml' && grep -q 'test' pyproject.toml && pip install .[test]
+        grep -q 'pytest' pyproject.toml || pip install pytest
+        grep -q 'pytest-cov' pyproject.toml || pip install pytest-cov
+        grep -q 'bandit' pyproject.toml || pip install bandit
+        grep -q 'mypy' pyproject.toml || pip install mypy
       shell: bash
+
+    - name: Check Format with Black
+      uses: psf/black@stable
+      with:
+        options: "--check --verbose --diff"
+        src: "./${{ inputs.source_dir }}"
+
+    - name: Error, Style Lint and Complexity Analysis with flake8
+      shell: bash
+      # with below, flake8 will run on ALL directories within $source_dir
+      # to exclude directories, edit .flake8
+      run: |
+        # flake8 - stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # flake8 - exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Parse PyTest coverage xml file name option
       shell: bash
@@ -89,7 +106,18 @@ runs:
     - name: Test with PyTest
       shell: bash
       run: |
-        pytest --cov ${{ env.pytest_report_name_options }} ${{ env.pytest_fail_percent_options }}
+        pytest --cov=${{ inputs.source_dir }} ${{ env.pytest_report_name_options }} ${{ env.pytest_fail_percent_options }}
+
+    - name: Type Check with Mypy
+      shell: bash
+      run: |
+        mypy ${{ inputs.source_dir }}
+
+    - name: Security Lint with Bandit
+      shell: bash
+      run: |
+        # bandit - log level low, critical issues only. Reports only if high confidence
+        bandit -ll -ii -r . -x ./.venv
 
     - name: Override Coverage Source Path for Sonar
       # needed for converting pytest coverage to sonarcloud formatting, details here:
