--- a/python-pipeline/.vscode/settings.json
+++ b/python-pipeline/.vscode/settings.json
@@ -9,5 +9,14 @@
             "template": "${composeCommand} ${configurationFile} up ${detached} ${build}"
         }
     ],
-    "trivy.offlineScan": true
+    "trivy.offlineScan": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests",
+        "-p",
+        "*_test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
