fix(dependabot): fix incorrect folder
https://github.com/dewcservices/devsecops/pull/29/files#r2013255823

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,7 +17,7 @@ updates:
       - "/python-pipeline/"
       - "/python-poetry-pipeline/"
       - "/python-uv-pipeline/"
-      - "/cplusplus-pipeline/"
+      - "/cpp-pipeline/"
       - "/golang-pipelne/"
     schedule:
       interval: "weekly"
