--- a/maven-pipeline/.devcontainer/devcontainer.json
+++ b/maven-pipeline/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 	"name": "java-maven-devcontainer",
 	"build": {
 		"dockerfile": "../Dockerfile",
-		"context": "../"
+		"context": "../",
+		"target": "dev"
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {}
@@ -17,8 +18,7 @@
 		"--userns=keep-id",
 		"--pid=host"
 	],
-	"remoteUser": "root",
-	"containerUser": "root",
+
 
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -34,13 +34,9 @@
 		],
 		  "settings": {
 			"[java]": {
-			  "editor.formatOnSave": true,
-			  "editor.codeActionsOnSave": {
-				"source.fixAll": "explicit",
-				"source.organizeImports": "explicit"
-			  },
-			  "editor.defaultFormatter": "vscjava.vscode-maven"
-			}
+			  "editor.defaultFormatter": "vscjava.vscode-maven",
+			},
+			 "editor.tabSize": 4
 		  }
 		}
 	  }
