--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -1,12 +1,19 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest
 
-RUN dnf update -y; \
+ARG dev=false
+ENV container oci
+ENV USER=default
+
+USER root
+
+# Check for package update
+RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical && \
 # Install git, nano
 dnf install git nano  -y; \
 # Install nodejs for SonarQube 
 dnf install nodejs -y; \
 # clear cache
-rm -rf /var/cache
+dnf clean all
 
 # Install uv, latest python and ruff 
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -23,7 +30,15 @@ gpgcheck=1
 enabled=1
 gpgkey=https://aquasecurity.github.io/trivy-repo/rpm/public.key
 EOF
-RUN dnf update -y; dnf install trivy -y; rm -rf /var/cache
+RUN dnf update -y; dnf install trivy -y; dnf clean all
+
+FROM base AS dev
+COPY .devcontainer/devtools.sh /tmp/devtools.sh
+RUN  /tmp/devtools.sh
+USER default
+#---
+FROM base
+USER default
 
 # OPTIONAL DEPLOYMENT EXAMPLE:
 #-----------------------------
